[gd_scene load_steps=29 format=3 uid="uid://cngv1rgplre2c"]

[ext_resource type="PackedScene" uid="uid://d3q18yfgnyvq2" path="res://Scenes/HUD/TooltipHeader.tscn" id="1"]
[ext_resource type="FontFile" uid="uid://d1pnwehsosppo" path="res://Assets/UI/Fonts/Friz Quadrata Std Medium.otf" id="1_rx3ev"]
[ext_resource type="StyleBox" path="res://Resources/Theme/button_styleboxflat_disabled.tres" id="2_6isww"]
[ext_resource type="StyleBox" path="res://Resources/Theme/button_styleboxflat_focus.tres" id="3_m3ka5"]
[ext_resource type="StyleBox" path="res://Resources/Theme/button_styleboxflat_hover.tres" id="4_7j0uu"]
[ext_resource type="PackedScene" uid="uid://cc70ktmpmbjts" path="res://Scenes/HUD/BottomMenuBar.tscn" id="5"]
[ext_resource type="StyleBox" uid="uid://bq8u0oqtro84y" path="res://Resources/Theme/button_styleboxflat.tres" id="5_6wrbw"]
[ext_resource type="PackedScene" uid="uid://cdamkmych2jb3" path="res://Scenes/HUD/TopMenuBar.tscn" id="6"]
[ext_resource type="StyleBox" path="res://Resources/Theme/button_styleboxflat_pressed.tres" id="6_plw4p"]
[ext_resource type="Texture2D" uid="uid://bbtfapahyrrl8" path="res://Assets/UI/HUD/day_time_icon.png" id="7_73hi4"]
[ext_resource type="Script" path="res://Scenes/HUD.gd" id="11"]
[ext_resource type="PackedScene" uid="uid://b1wuycbxpu0op" path="res://Scenes/HUD/TowerInventory.tscn" id="11_hrubh"]
[ext_resource type="PackedScene" uid="uid://nl0pvhb4rasi" path="res://Scenes/HUD/ButtonTooltip.tscn" id="11_ka7k1"]
[ext_resource type="PackedScene" uid="uid://b6l4hi00yx7js" path="res://Scenes/HUD/TowerTooltip.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://bbq8xnlx68q72" path="res://Scenes/HUD/TowerActions.tscn" id="12_2t2wp"]
[ext_resource type="PackedScene" uid="uid://4tcjyre0hoji" path="res://Scenes/HUD/WaveStatus.tscn" id="13_0id32"]
[ext_resource type="PackedScene" uid="uid://b41jiom5a6uq8" path="res://Scenes/HUD/SelectedUnitInfo.tscn" id="15_yuxef"]
[ext_resource type="PackedScene" uid="uid://i0b3uilwt2as" path="res://Scenes/HUD/BuildVersion.tscn" id="21_ko2ou"]
[ext_resource type="PackedScene" uid="uid://vdiwgjefedtp" path="res://Scenes/HUD/ResearchMenu.tscn" id="22_kpm02"]

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("1_rx3ev")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0.0470319, 0.0470319, 0.0664062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="14"]
bg_color = Color(0.0980392, 0.0980392, 0.141176, 0.45098)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.8, 0.784314, 0.0156863, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 10
expand_margin_left = 10.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="10"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.137255, 0.133333, 0.152941, 1)
border_width_top = 2
border_width_right = 2
border_color = Color(0.458824, 0.45098, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3
shadow_size = 2
shadow_offset = Vector2(2, -2)

[sub_resource type="StyleBoxEmpty" id="11"]

[sub_resource type="StyleBoxFlat" id="12"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 4.0
bg_color = Color(0.0980392, 0.0980392, 0.141176, 1)
border_width_top = 2
border_width_right = 2
border_color = Color(0.898039, 0.882353, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3
shadow_size = 2
shadow_offset = Vector2(2, -2)

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.0980392, 0.0980392, 0.141176, 1)
border_width_top = 2
border_width_right = 2
border_color = Color(0.705882, 0.694118, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3
shadow_size = 2
shadow_offset = Vector2(2, -2)

[sub_resource type="StyleBoxFlat" id="13"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 4.0
bg_color = Color(0.0980392, 0.0980392, 0.141176, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.898039, 0.882353, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3
expand_margin_top = 2.0
expand_margin_right = 2.0
shadow_size = 1

[sub_resource type="Theme" id="Theme_k7iw7"]
default_font = SubResource("1")
default_font_size = 30
Button/colors/font_color = Color(0.878431, 0.878431, 0.878431, 0.894118)
Button/colors/font_color_disabled = Color(0.360784, 0.360784, 0.360784, 0.517647)
Button/colors/font_color_hover = Color(0.941176, 0.941176, 0.941176, 1)
Button/fonts/font = SubResource("1")
Button/styles/disabled = ExtResource("2_6isww")
Button/styles/focus = ExtResource("3_m3ka5")
Button/styles/hover = ExtResource("4_7j0uu")
Button/styles/normal = ExtResource("5_6wrbw")
Button/styles/pressed = ExtResource("6_plw4p")
HudMarginContainer/base_type = &"MarginContainer"
HudMarginContainer/constants/margin_left = 40
HudMarginContainer/constants/margin_right = 40
Icons/icons/DayTime = ExtResource("7_73hi4")
Label/colors/font_color_shadow = Color(0, 0, 0, 1)
Label/constants/shadow_offset_x = 2
Label/constants/shadow_offset_y = 2
Label/fonts/font = SubResource("1")
ResourceTab/base_type = &"Panel"
ResourceTab/styles/panel = SubResource("8")
TooltipPanel/styles/panel = SubResource("14")
TowerButton/styles/disabled = SubResource("10")
TowerButton/styles/focus = SubResource("11")
TowerButton/styles/hover = SubResource("12")
TowerButton/styles/normal = SubResource("9")
TowerButton/styles/pressed = SubResource("13")

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_k7iw7")
script = ExtResource("11")

[node name="DevControls" parent="." instance_placeholder="res://Scenes/HUD/DevControls.tscn"]
layout_mode = 1
offset_top = 1.0
offset_bottom = 1.0

[node name="TooltipHeader" parent="." instance=ExtResource("1")]
offset_left = 14.0
offset_top = 88.0
offset_right = 14.0
offset_bottom = 88.0
scale = Vector2(0.567118, 0.567118)

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_bottom = 300

[node name="NormalMessageContainer" type="VBoxContainer" parent="MarginContainer3"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2

[node name="TowerTooltip" parent="." instance=ExtResource("12")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 15.0
offset_top = 167.0
offset_right = 15.0
offset_bottom = 67.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.5, 0.5)

[node name="WaveStatus" parent="." instance=ExtResource("13_0id32")]
layout_mode = 1
offset_left = 13.0
offset_top = 150.0
offset_right = -1907.0
offset_bottom = -930.0

[node name="BottomMenuBar" parent="." instance=ExtResource("5")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
grow_vertical = 0

[node name="TowerInventory" parent="." instance=ExtResource("11_hrubh")]
layout_mode = 1
offset_left = 450.0
offset_top = 832.0
offset_right = -1070.0
offset_bottom = -87.0

[node name="TowerActions" parent="." instance=ExtResource("12_2t2wp")]
layout_mode = 1
offset_left = 1620.0
offset_top = 240.0
offset_right = 1620.0
offset_bottom = 240.0

[node name="Minimap" parent="." instance_placeholder="res://Scenes/HUD/Minimap.tscn"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_right = 0.0
offset_left = 229.0
offset_right = 445.0
grow_horizontal = 1
mouse_filter = 2

[node name="ButtonTooltip" parent="." instance=ExtResource("11_ka7k1")]
visible = false
layout_mode = 1
offset_left = 1000.0
offset_top = 150.0
offset_right = -920.0
offset_bottom = -930.0

[node name="SelectedUnitInfo" parent="." instance=ExtResource("15_yuxef")]
layout_mode = 1
offset_left = 10.0
offset_top = 850.0
offset_right = -1910.0
offset_bottom = -230.0

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 300

[node name="ErrorMessageContainer" type="VBoxContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="FirstNodeDummy" type="Control" parent="MarginContainer2/ErrorMessageContainer"]
layout_mode = 2

[node name="BuildVersionLabel" parent="." instance=ExtResource("21_ko2ou")]
layout_mode = 1
offset_left = 2.0
offset_top = -20.0
offset_right = 430.0
offset_bottom = 14.0
scale = Vector2(0.55408, 0.55408)

[node name="ResearchButton" type="Button" parent="." groups=["sfx_menu_click"]]
layout_mode = 0
offset_left = 1578.0
offset_top = 1001.0
offset_right = 1738.0
offset_bottom = 1064.0
text = "Research
"

[node name="ResearchMenu" parent="." instance=ExtResource("22_kpm02")]
visible = false
layout_mode = 1
offset_left = 1554.0
offset_top = 486.0
offset_right = -242.0
offset_bottom = -313.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="TopMenuBar" parent="MarginContainer" instance=ExtResource("6")]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[connection signal="expanded" from="TooltipHeader" to="." method="_on_TooltipHeader_expanded"]
[connection signal="hidden" from="BottomMenuBar" to="." method="_on_right_menu_bar_hidden"]
[connection signal="pressed" from="ResearchButton" to="." method="_on_research_button_pressed"]
